suspend before, resume after

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -133,21 +133,25 @@ components:
           description: "Detect if this is an upgrade"
           setVariables:
             - name: IS_UPGRADE
+        - cmd: ./flux suspend source git bigbang -n bigbang --verbose --timeout=5m || true
+          dir: run/flux
+          description: "Suspend Big Bang GitRepository"
+        - cmd: ./flux suspend source chart bigbang-bigbang -n bigbang --verbose --timeout=5m || true
+          dir: run/flux
+          description: "Suspend Big Bang HelmChart"
+        - cmd: ./flux suspend helmrelease -n bigbang --all --verbose --timeout 5m || true
+          dir: run/flux
+          description: "Suspend Big Bang package HelmReleases"
         after:
-          - cmd: ./zarf tools kubectl wait --for=jsonpath='{.spec.ref.tag}'=###ZARF_PKG_TMPL_BIGBANG_VERSION### gitrepository bigbang -n bigbang --timeout=5m
-            description: "Wait for BigBang GitRepository to update to latest version"
-          - cmd: ./flux reconcile source git bigbang -n bigbang --verbose --timeout=5m
+          - cmd: ./flux resume source git bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
-            description: "Reconcile BigBang GitRepository"
-          - cmd: ./flux suspend source chart bigbang-bigbang -n bigbang --verbose --timeout=5m
-            dir: run/flux
-            description: "Suspend Big Bang HelmChart"
+            description: "Resume Big Bang GitRepository"
           - cmd: ./flux resume source chart bigbang-bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
             description: "Resume Big Bang HelmChart"
-          - cmd: ./flux suspend helmrelease -n bigbang --all --verbose --timeout 5m
+          - cmd: ./flux resume helmrelease -n bigbang bigbang --verbose --timeout 5m
             dir: run/flux
-            description: "Suspend Big Bang package HelmReleases"
+            description: "Resume Big Bang HelmRelease"
           - cmd: ./flux resume helmrelease -n bigbang --all --verbose --timeout 5m
             dir: run/flux
             description: "Resume Big Bang package HelmReleases"
