--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -52,7 +52,7 @@ jobs:
 
           zarf package deploy zarf-package-distro-eks-multi.tar.zst \
             --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm 
+            --confirm
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
 
@@ -79,6 +79,9 @@ jobs:
           zarf package deploy zarf-package-*.tar.zst \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --set state_bucket_name="uds-dev-state-bucket" \
+            --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
         working-directory: aws
         timeout-minutes: 60
@@ -170,6 +173,7 @@ jobs:
 
       - name: Deploy latest package version
         working-directory: aws
+        # todo: update after next publish that incorporate PR#211
         run: |
           zarf package deploy \
             oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
@@ -183,6 +187,9 @@ jobs:
           zarf package deploy zarf-package-*.tar.zst \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --set state_bucket_name="uds-dev-state-bucket" \
+            --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
         working-directory: aws
         timeout-minutes: 60
