Restore AWS wprkflow

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,9 +1,6 @@
 name: CICD Pipeline Testing
-on: 
-  # push: ## TODO: use this one
-  pull_request: ## TODO: remove this one
-    branches:
-      - main
+on: [push]
+
 jobs:
   create_pacakge:
     runs-on: ubuntu-latest
@@ -27,17 +24,22 @@ jobs:
           # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
           version: v0.27.0
 
-## Uncomment after testing
+      - name: Create DUBBD
+        run: zarf package create --confirm
+        working-directory: defense-unicorns-distro
 
-      # - name: Create DUBBD
-      #   run: zarf package create --confirm
+      - name: Create CocoWow
+        run: zarf package create --confirm
+        working-directory: cocowow
+      - name: Create DUBBD AWS 
+        run: zarf package create --confirm
+        working-directory: aws
+
+      # - name: login DUBBD
+      #   run: zarf tools registry login ghcr.io -u runyontr -p ${GH_PAT}
+      # - name: publish DUBBD
+      #   run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro
       #   working-directory: defense-unicorns-distro
-
-      # - name: Create CocoWow
-      #   run: zarf package create --confirm
-      #   working-directory: cocowow
-
-      # - name: Create DUBBD AWS 
-      #   run: zarf package create --confirm
+      # - name: publish DUBBD
+      #   run: zarf package publish zarf-package-big-bang-aws-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws
       #   working-directory: aws
- 
