--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -79,7 +79,7 @@ jobs:
           zarf package deploy zarf-package-*.tar.zst \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --set state_bucket_name="uds-dev-state-bucket" \
+            --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
@@ -187,7 +187,7 @@ jobs:
           zarf package deploy zarf-package-*.tar.zst \
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --set state_bucket_name="uds-dev-state-bucket" \
+            --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
