--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -4,22 +4,30 @@ name: Publish Dubbd
 # Will remove before merge and make it only tags
 on:
   push:
-    tags:
-      - "v*"  
+    branches:
+      - main 
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 
 jobs:
-  eksctl:
+  publish-package:
     runs-on: ubuntu-latest
   
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Create Release Tag
+        id: tag
+        uses: google-github-actions/release-please-action@v3
+        with:
+          command: manifest # use configs in release-please-config.json
+          release-type: simple
+
       - name: Configure AWS credentials
+        if: ${{ steps.tag.outputs.release_created }}
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
@@ -27,6 +35,7 @@ jobs:
           aws-region: us-west-2
 
       - name: Install Zarf
+        if: ${{ steps.tag.outputs.release_created }}
         uses: defenseunicorns/setup-zarf@main
         with:
           # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
@@ -34,34 +43,35 @@ jobs:
           download-init-package: true
 
       - name: Login to Registry1
+        if: ${{ steps.tag.outputs.release_created }}
         uses: docker/login-action@v2
         with:
           registry: registry1.dso.mil
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
+
       - name: Login to GHCR
+        if: ${{ steps.tag.outputs.release_created }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: dummy
           password: ${{ secrets.GITHUB_TOKEN }}
-    
-      - name: Create DUBBD
-        run: zarf package create --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
-      
+
       - name: Publish DUBBD
-        run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages
-        working-directory: defense-unicorns-distro
+        if: ${{ steps.tag.outputs.release_created }}
+        uses: ./.github/actions/build-publish-zarf-package
+        with:
+          working-directory: defense-unicorns-distro
+          package-name: zarf-package-big-bang-amd64
         timeout-minutes: 60
 
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
+      - name: Publish DUBBD-AWS
+        if: ${{ steps.tag.outputs.release_created }}
+        uses: ./.github/actions/build-publish-zarf-package
+        with:
+          working-directory: aws
+          package-name: zarf-package
         timeout-minutes: 60
       
-      - name: Publish DUBBD-AWS
-        run: zarf package publish zarf-package-*.tar.zst oci://ghcr.io/defenseunicorns/packages
-        working-directory: aws
-        timeout-minutes: 60
+
