--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -136,12 +136,15 @@ components:
         - cmd: ./flux suspend source git bigbang -n bigbang --verbose --timeout=5m || true
           dir: run/flux
           description: "Suspend Big Bang GitRepository"
+          mute: true
         - cmd: ./flux suspend source chart bigbang-bigbang -n bigbang --verbose --timeout=5m || true
           dir: run/flux
           description: "Suspend Big Bang HelmChart"
+          mute: true
         - cmd: ./flux suspend helmrelease -n bigbang --all --verbose --timeout 5m || true
           dir: run/flux
           description: "Suspend Big Bang package HelmReleases"
+          mute: true
         after:
           - cmd: ./flux resume source git bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
