--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -82,7 +82,7 @@ jobs:
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_key="tfstate/ci/install/${SHA:0:7}-state-bucket.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
         working-directory: aws
@@ -192,7 +192,7 @@ jobs:
             --set loki_force_destroy=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/${SHA:0:7}-state-bucket.tfstate" \
+            --set state_key="tfstate/ci/upgrade/${SHA:0:7}-state-bucket.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
         working-directory: aws
