--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -61,7 +61,14 @@ components:
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
   - name: loki-module
     required: true
+    actions:
+      onCreate:
+        before:
+          - cmd: terraform get -update
+            dir: loki
     files:
+    - files: loki/.terraform
+      target: run/loki/.terraform
     - source: loki/main.tf
       target: run/loki/main.tf
     - source: loki/variables.tf
