fix: change release_created flag  to optional

--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -5,7 +5,7 @@ on:
   workflow_call:
     inputs:
       release_created:
-        required: true
+        required: false
         type: boolean
       working_dir:
         required: true
