--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -14,6 +14,10 @@ package:
       public_key_file: bigbang.dev.key
       public_cert_file: bigbang.dev.cert
       name: "big-bang-aws" # maybe inject something here for the GH PR?
+      state_bucket_name: uds-dev-state-bucket
+      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
+      state_dynamodb_table_name: uds-dev-state-dynamodb
+      region: us-west-2
       #Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       #loki_force_destroy: "true"
