--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -17,6 +17,15 @@ variables:
 - name: TERRAFORM_VERSION
 - name: TERRAFORM_PROVIDER_AWS_VERSION
 
+- name: STATE_BUCKET_NAME
+  description: "Name of the pre-existing Terraform state S3 bucket"
+- name: STATE_KEY
+  description: "Path to the state file key in the state bucket"
+- name: STATE_DYNAMODB_TABLE_NAME
+  description: "Name of the DynamoDB table used for Terraform state locking"
+- name: REGION
+  description: "The AWS region to run the Terraform in"
+
 - name: LOKI_FORCE_DESTROY
   description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
   default: "false"
@@ -55,10 +64,9 @@ components:
     actions:
       onCreate:
         before:
-          - cmd: "terraform init -upgrade"
+          - cmd: terraform get -update
             dir: loki
     files:
-    # terraform code
     - source: loki/.terraform
       target: run/loki/.terraform
     - source: loki/main.tf
@@ -69,8 +77,6 @@ components:
       target: run/loki/output.tf
     - source: loki/terraform.tfvars
       target: run/loki/terraform.tfvars
-    - source: loki/.terraform.lock.hcl
-      target: run/loki/.terraform.lock.hcl
   - name: execute-terraform
     required: true
     actions:
@@ -78,6 +84,13 @@ components:
         before:
           - cmd: "test -d ./loki/ && chmod -R ugo+rwx ./loki/ || echo $?"
             dir: run
+          - cmd: |
+              terraform init -force-copy \
+              -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
+              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
+              -backend-config="region=${ZARF_VAR_REGION}" \
+              -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
+            dir: run/loki
           - cmd: "terraform plan"
             dir: run/loki
           - cmd: sleep 15 #time to review
