--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -5,11 +5,7 @@ name: Publish Dubbd
 on:
   push:
     branches:
-      - Add-auto-version 
-
-# permissions:
-#   contents: write
-#   packages: write
+      - main
 
 jobs:
   tag-new-version:
@@ -24,7 +20,6 @@ jobs:
       - name: Create Release Tag
         id: tag
         uses: google-github-actions/release-please-action@v3
-      # https://github.com/google-github-actions/release-please-action
         with:
           command: manifest # use configs in release-please-config.json
           release-type: simple
