fix: correct permissions

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -5,14 +5,15 @@ name: Publish Dubbd
 on:
   push:
     branches:
+      - auto-publish-tag
       - main
 
 jobs:
   tag-new-version:
-    permissions: write-all
-    # permissions:
-    #   contents: write
-    #   packages: write
+    # permissions: write-all
+    permissions:
+      contents: write
+      packages: write
     runs-on: ubuntu-latest
     outputs:
       release_created: ${{ steps.tag.outputs.release_created }}
@@ -24,22 +25,29 @@ jobs:
           command: manifest # use configs in release-please-config.json
           release-type: simple
 
-  # publish-dubbd:
-  #   needs: tag-new-version
-  #   uses: ./.github/workflows/publish_package.yaml
-  #   with:
-  #     release_created: ${{ needs.tag-new-version.outputs.release_created }}
-  #     working_dir: defense-unicorns-distro
-  #     package_name: zarf-package-big-bang-amd64
-  #   secrets: inherit
+  publish-dubbd:
+    needs: tag-new-version
+    uses: ./.github/workflows/publish_package.yaml
+    with:
+      release_created: ${{ needs.tag-new-version.outputs.release_created }}
+      working_dir: defense-unicorns-distro
+      package_name: zarf-package-big-bang-amd64
+    secrets: inherit
 
-  # publish-dubbd-aws:
-  #   needs: tag-new-version
-  #   uses: ./.github/workflows/publish_package.yaml
-  #   with:
-  #     release_created: ${{ needs.tag-new-version.outputs.release_created }}
-  #     working_dir: aws
-  #     package_name: zarf-package
-  #   secrets: inherit
+  publish-dubbd-aws:
+    needs: tag-new-version
+    uses: ./.github/workflows/publish_package.yaml
+    with:
+      release_created: ${{ needs.tag-new-version.outputs.release_created }}
+      working_dir: aws
+      package_name: zarf-package
+    secrets: inherit
 
-   
+  publish-dubbd-k3d:
+    needs: tag-new-version
+    uses: ./.github/workflows/publish_package.yaml
+    with:
+      release_created: ${{ needs.tag-new-version.outputs.release_created }}
+      working_dir: aws
+      package_name: zarf-package
+    secrets: inherit
