--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -25,8 +25,8 @@ jobs:
           command: manifest # use configs in release-please-config.json
           release-type: simple
       - id: result
-        run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> "$GITHUB_OUTPUT" \
-            echo '${{ toJSON(job) }}'
+          # run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> "$GITHUB_OUTPUT" 
+        run: echo "${{ toJSON(job) }}
 
   publish-dubbd:
     needs: tag-new-version
