fix: logs steps

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -26,7 +26,7 @@ jobs:
           release-type: simple
       - id: result
           # run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> "$GITHUB_OUTPUT" 
-        run: echo "${{ toJSON(job) }}"
+        run: echo "${{ toJSON(steps) }}"
 
   publish-dubbd:
     needs: tag-new-version
