fix: add permissions

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   tag-new-version:
-    # permissions: write-all
-    permissions:
-      contents: write
-      packages: write
+    permissions: write-all
+    # permissions:
+    #   contents: write
+    #   packages: write
     runs-on: ubuntu-latest
     outputs:
       release_created: ${{ steps.result.outputs.release_created }}
