--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -16,7 +16,7 @@ jobs:
     #   packages: write
     runs-on: ubuntu-latest
     outputs:
-      release_created: ${{ steps.result.outputs.release_created }}
+      release_created: ${{ steps.tag.outputs.release_created }}
     steps:
       - name: Create Release Tag
         id: tag
@@ -24,9 +24,15 @@ jobs:
         with:
           command: manifest # use configs in release-please-config.json
           release-type: simple
-      - id: result
-          # run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> "$GITHUB_OUTPUT" 
-        run: echo "${{ toJSON(steps) }}"
+      - id: value
+        run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> $GITHUB_OUTPUT 
+
+  logging:
+    needs: tag-new-version
+    runs-on: ubuntu-latest
+    steps:
+      - id: values
+        run: echo "${{ toJSON(needs) }}"
 
   publish-dubbd:
     needs: tag-new-version
