--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -16,7 +16,7 @@ jobs:
     #   packages: write
     runs-on: ubuntu-latest
     outputs:
-      release_created: ${{ steps.tag.outputs.release_created }}
+      release_created: ${{ steps.release-flag.outputs.release_created }}
     steps:
       - name: Create Release Tag
         id: tag
