fix: use release_created

--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -25,8 +25,7 @@ jobs:
           command: manifest # use configs in release-please-config.json
           release-type: simple
       - id: release-flag
-        # run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> $GITHUB_OUTPUT 
-        run: echo "release_created=false" >> $GITHUB_OUTPUT 
+        run: echo "release_created=${{ steps.tag.outputs.release_created }}" >> $GITHUB_OUTPUT 
 
   logging:
     needs: tag-new-version
