Fix handling of flux reconcile behavior (#201)

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -129,40 +129,36 @@ components:
     actions:
       onDeploy:
         before:
-          - cmd: >-
-              ./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null
-              2>&1 && echo true || echo false
+          - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
             mute: true
-            description: Detect if this is an upgrade
+            description: "Detect if this is an upgrade"
             setVariables:
               - name: IS_UPGRADE
+          - cmd: ./flux suspend source git bigbang -n bigbang --verbose --timeout=5m || true
+            dir: run/flux
+            description: "Suspend Big Bang GitRepository"
+            mute: true
+          - cmd: ./flux suspend source chart bigbang-bigbang -n bigbang --verbose --timeout=5m || true
+            dir: run/flux
+            description: "Suspend Big Bang HelmChart"
+            mute: true
+          - cmd: ./flux suspend helmrelease -n bigbang --all --verbose --timeout 5m || true
+            dir: run/flux
+            description: "Suspend Big Bang package HelmReleases"
+            mute: true
         after:
-          - cmd: >-
-              ./zarf tools kubectl wait
-              --for=jsonpath='{.spec.ref.tag}'=###ZARF_PKG_TMPL_BIGBANG_VERSION###
-              gitrepository bigbang -n bigbang --timeout=5m
-            description: Wait for BigBang GitRepository to update to latest version
-          - cmd: >-
-              ./flux reconcile source git bigbang -n bigbang --verbose
-              --timeout=5m
+          - cmd: ./flux resume source git bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
-            description: Reconcile BigBang GitRepository
-          - cmd: >-
-              ./flux suspend source chart bigbang-bigbang -n bigbang --verbose
-              --timeout=5m
+            description: "Resume Big Bang GitRepository"
+          - cmd: ./flux resume source chart bigbang-bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
-            description: Suspend Big Bang HelmChart
-          - cmd: >-
-              ./flux resume source chart bigbang-bigbang -n bigbang --verbose
-              --timeout=5m
+            description: "Resume Big Bang HelmChart"
+          - cmd: ./flux resume helmrelease -n bigbang bigbang --verbose --timeout 5m
             dir: run/flux
-            description: Resume Big Bang HelmChart
-          - cmd: ./flux suspend helmrelease -n bigbang --all --verbose --timeout 5m
-            dir: run/flux
-            description: Suspend Big Bang package HelmReleases
+            description: "Resume Big Bang HelmRelease"
           - cmd: ./flux resume helmrelease -n bigbang --all --verbose --timeout 5m
             dir: run/flux
-            description: Resume Big Bang package HelmReleases
+            description: "Resume Big Bang package HelmReleases"
         onFailure:
           - cmd: |
               export PATH=$(dirname ./zarf):$PATH
