--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -6,7 +6,4 @@ neuvector:
     containerd:
       enabled: true
     monitor:
-      install: true # getting error here on having this come up
-
-### crictl config --set runtime-endpoint=/var/run/containerd/containerd.sock
-# 
+      install: true
