--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -1,19 +1,13 @@
 name: Publish Dubbd
 
-
-# Will remove before merge and make it only tags
 on:
   push:
     branches:
-      - auto-publish-tag
       - main
 
 jobs:
   tag-new-version:
     permissions: write-all
-    # permissions:
-    #   contents: write
-    #   packages: write
     runs-on: ubuntu-latest
     outputs:
       release_created: ${{ steps.release-flag.outputs.release_created }}
@@ -27,38 +21,18 @@ jobs:
       - id: release-flag
         run: echo "release_created=${{ steps.tag.outputs.release_created || false }}" >> $GITHUB_OUTPUT 
 
-  logging:
-    needs: tag-new-version
-    runs-on: ubuntu-latest
-    steps:
-      - id: values
-        run: echo "${{ toJSON(needs) }}"
-      - id: values3
-        run: echo "${{ needs.tag-new-version.outputs.release_created }}"
-
-  publish-dubbd:
-    needs: tag-new-version
-    uses: ./.github/workflows/publish_package.yaml
-    with:
-      release_created: ${{ needs.tag-new-version.outputs.release_created }}
-      working_dir: defense-unicorns-distro
-      package_name: zarf-package-big-bang-amd64
-    secrets: inherit
-
   publish-dubbd-aws:
     needs: tag-new-version
-    uses: ./.github/workflows/publish_package.yaml
+    uses: ./.github/workflows/publish.dubbd.package.yaml
     with:
       release_created: ${{ needs.tag-new-version.outputs.release_created }}
       working_dir: aws
-      package_name: zarf-package
     secrets: inherit
 
   publish-dubbd-k3d:
     needs: tag-new-version
-    uses: ./.github/workflows/publish_package.yaml
+    uses: ./.github/workflows/publish.dubbd.package.yaml
     with:
       release_created: ${{ needs.tag-new-version.outputs.release_created }}
-      working_dir: aws
-      package_name: zarf-package
+      working_dir: k3d
     secrets: inherit
