--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -93,7 +93,7 @@ components:
         before:
           - cmd: test -d ./loki/ && chmod -R ugo+rwx ./loki/ || echo $?
             dir: run
-          - cmd: >
+          - cmd: |
               terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
               -backend-config="key=${ZARF_VAR_STATE_KEY}" \
