feat: Added variable for approved registries (#212)
* Added variable for approved registries

Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

* state for upgrade

---------

Signed-off-by: Tom Runyon <tom@defenseunicorns.com>
Co-authored-by: Chris Harden <cmharden@users.noreply.github.com>
Co-authored-by: Micah Nagel <micah.nagel@defenseunicorns.com>

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -32,7 +32,9 @@ variables:
   default: bigbang.dev.key
   description: "This file contains the key for the admin ingress gateway"
   prompt: false
-
+- name: APPROVED_REGISTRIES
+  description: "Regex of approved registries to allow in cluster"
+  default: "127.0.0.1* | registry1.dso.mil"
 - name: MONITORING_PROMETHEUS_PVC_SIZE
   default: "50Gi"
   description: Size of PVC for Prometheus
@@ -44,7 +46,6 @@ variables:
 - name: LOKI_PVC_SIZE
   default: "40Gi"
   description: Size of the PVC for Loki when running in dev mode
-
 - name: SLACK_URL
   default: https://none.dev
   description: Slack Webhook URL for alerts
