--- a/.github/workflows/publish.dubbd.package.yaml
+++ b/.github/workflows/publish.dubbd.package.yaml
@@ -23,13 +23,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: ./.github/actions/create-bb-package
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
+          working-dir: ${{ inputs.working_dir }}
+      
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -37,25 +36,6 @@ jobs:
           username: dummy
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.27.1
-          download-init-package: true
-
-      - name: Login to Registry1
-        uses: docker/login-action@v2
-        with:
-          registry: registry1.dso.mil
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
-      
-      - name: Create Zarf Package
-        run: zarf package create --confirm
-        working-directory: ${{ inputs.working_dir }}
-        timeout-minutes: 60
-      
       - name: Publish Zarf Package
         run: zarf package publish zarf-package-*.tar.zst oci://ghcr.io/defenseunicorns/packages
         working-directory: ${{ inputs.working_dir }}
