--- a/.github/workflows/test-aws-package.yaml
+++ b/.github/workflows/test-aws-package.yaml
@@ -18,19 +18,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Login to Registry1
-        uses: docker/login-action@v2
+      - uses: ./.github/actions/create-bb-package
         with:
-          registry: registry1.dso.mil
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.27.1
+          working-dir: aws
           download-init-package: true        
+          timeout-minutes: 60
 
       - name: Set eks_cluster_name
         id: get_cluster_name
@@ -64,11 +58,6 @@ jobs:
       - name: Zarf init
         run: |
           zarf init -a amd64 --components=git-server --confirm
-
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
-        timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
         env:
